# strictly_games

./: .gitignore  .markdownlint-cli2.yaml  AGENT_EXPLORATION_PLAN.md  AGENT_TESTING.md  ANTHROPIC_TEST_RESULTS.md  AUTO_POLL_DESIGN.md  BLACKJACK_GUIDE.md  CLAUDE.md  CODE_AUDIT.md  CONTEXT_AWARE_SELECT.md  COPILOT_HTTP_BUG.md  CRAPS_GUIDE.md  Cargo.toml  ELICITATION_KANI_BUG.md  ELICITATION_STATUS.md  FORMAL_VERIFICATION.md  HTTP_AGENT_GUIDE.md  IMPLEMENTATION_SUMMARY.md  KANI_DEV_GUIDE.md  KANI_LAWYERS_GUIDE.md  MANUAL_TEST.md  MCP_CLIENT_PLAN.md  NEXT_STEP.md  PHASE_4_COMPLETE.md  PROOF_ARCHITECTURE.md  README.md  TEST_AGENT.sh  TEST_STATUS.md  TOOL_PER_ACTION_PLAN.md  VERIFICATION_DASHBOARD.md  VERIFICATION_SHOWCASE.md  VERIFIED_TUI_PLAN.md  agent_config.toml  agent_o_config.toml  blackjack_critique.md  blackjack_critique1.md  blackjack_proofs.md  creusot_goal_results.csv  creusot_module_results.csv  creusot_verification_results.csv  (+11 more)
crates/strictly_blackjack/: Cargo.toml
crates/strictly_blackjack/src/: action.rs  bet_amount.rs  card.rs  contracts.rs  deck.rs  display.rs  error.rs  explore.rs  hand.rs  ledger.rs  lib.rs  multi_player.rs  shoe.rs  traits.rs  types.rs  typestate.rs  view.rs  vsm.rs
crates/strictly_blackjack/src/rules/: blackjack.rs  bust.rs  hand_value.rs  mod.rs
crates/strictly_blackjack/src/workflow/: mod.rs  propositions.rs  tools.rs
crates/strictly_blackjack/tests/: workflow_verified_test.rs
crates/strictly_craps/: Cargo.toml
crates/strictly_craps/src/: bet.rs  contracts.rs  dice.rs  display.rs  error.rs  explore.rs  ledger.rs  lesson.rs  lib.rs  payout.rs  personality.rs  point.rs  table.rs  traits.rs  typestate.rs  view.rs  vsm.rs
crates/strictly_craps/src/workflow/: mod.rs  propositions.rs  tools.rs
crates/strictly_games/: Cargo.toml
crates/strictly_games/examples/: agent_config.toml
crates/strictly_games/migrations/00000000000001_create_users/: down.sql
crates/strictly_games/migrations/00000000000002_create_game_stats/: down.sql  up.sql
crates/strictly_games/src/: agent_config.rs  agent_library.rs  cli.rs  lib.rs  main.rs  profile_service.rs
crates/strictly_games/src/creusot_proofs/: README.md  mod.rs  passive_affirm.rs
crates/strictly_games/src/db/: error.rs  models.rs  schema.rs
crates/strictly_games/src/games/tictactoe/: action.rs  position.rs
crates/strictly_games/src/games/tictactoe/rules/: draw.rs
crates/strictly_games/src/kani_proofs/: passive_affirm_proof.rs
crates/strictly_games/src/lobby/screens/: agent_select.rs  mod.rs  stats_view.rs
crates/strictly_games/src/tui/: input.rs  standalone.rs
crates/strictly_games/src/verus_proofs/: README.md  game_invariants.rs  mod.rs
crates/strictly_games/tests/: agent_game_test.rs  llm_integration_test.rs
crates/strictly_games/tests/kani/: README.md
crates/strictly_proofs/: Cargo.toml  build.rs
crates/strictly_proofs/src/: lib.rs
crates/strictly_proofs/src/creusot_proofs/: README.md  bankroll_financial.rs  compositional_proof.rs  game_invariants.rs  mod.rs  tui_breakpoints.rs
crates/strictly_proofs/src/kani_proofs/: bankroll_financial.rs  blackjack_compositional.rs  blackjack_invariants.rs  blackjack_scenarios.rs  compositional_proof.rs  craps_financial.rs  craps_invariants.rs  craps_scenarios.rs  game_invariants.rs  mod.rs  tictactoe_contracts.rs  tui_breakpoints.rs
crates/strictly_proofs/src/verus_proofs/: README.md  bankroll_financial.rs  compositional_proof.rs  game_invariants.rs  mod.rs  tui_breakpoints.rs
crates/strictly_server/: Cargo.toml
crates/strictly_server/migrations/00000000000001_create_users/: up.sql
crates/strictly_server/src/: agent_handler.rs  agent_library.rs  egui_frontend.rs  leptos_frontend.rs  lib.rs  llm_client.rs  server.rs  session.rs  verify.rs
crates/strictly_server/src/db/: mod.rs
crates/strictly_server/src/games/: display.rs  mod.rs
crates/strictly_server/src/games/blackjack/: action.rs  contracts.rs  display.rs  factories.rs  ledger.rs  mod.rs  session.rs  typestate.rs
crates/strictly_server/src/games/blackjack/workflow/: mod.rs  propositions.rs  runner.rs  tools.rs  workflow.rs
crates/strictly_server/src/games/craps/: display.rs  mod.rs  session.rs
crates/strictly_server/src/games/tictactoe/: action.rs  contracts.rs  display.rs  factory.rs  mod.rs  outcome.rs  phases.rs  typestate.rs  wrapper.rs
crates/strictly_server/src/lobby/: controller.rs  mod.rs  screen.rs  settings.rs
crates/strictly_server/src/lobby/screens/: blackjack_setup.rs  game_select.rs  main_lobby.rs  mod.rs  profile_select.rs  settings.rs
crates/strictly_server/src/tui/: blackjack.rs  chat_widget.rs  contextual_communicator.rs  contracts.rs  craps.rs  game_ir.rs  mcp_communicator.rs  mod.rs  observable_communicator.rs  palette.rs  rest_client.rs  standalone.rs  tui_communicator.rs  typestate_widget.rs
crates/strictly_server/tests/: workflow_verified_test.rs
crates/strictly_tictactoe/: Cargo.toml  MIRROR_WARNING.md
crates/strictly_tictactoe/src/: action.rs  complete.rs  contracts.rs  display.rs  explore.rs  lib.rs  outcome.rs  position.rs  traits.rs  types.rs  typestate.rs  view.rs  vsm.rs
crates/strictly_tictactoe/src/rules/: draw.rs  win.rs
crates/strictly_tictactoe/tests/: elicit_complete_test.rs
examples/: agent_config.toml  agent_x_config.toml  opus.toml  sonnet.toml
scripts/: verification_dashboard.py  verify_tracked.py
src/: agent_config.rs  agent_handler.rs  cli.rs  elicit_router.rs  lib.rs  llm_client.rs  main.rs  server.rs  session.rs
src/creusot_proofs/: compositional_proof.rs  game_invariants.rs
src/tui/: ui.rs  (+11 more)
strictly_games_tui/: Cargo.toml  README.md
strictly_games_tui/src/: app.rs  http_client.rs  http_orchestrator.rs  main.rs  mode.rs  orchestrator.rs
strictly_games_tui/src/players/: agent.rs  http.rs  http_human.rs  human.rs  mod.rs  simple_ai.rs
strictly_games_tui/src/ui/: board.rs  mod.rs
tests/: agent_game_test.rs  agent_library_test.rs  claude_models_test.rs  db_repository_test.rs  llm_integration_test.rs  tictactoe_contracts_test.rs  tictactoe_position_test.rs  tictactoe_typestate_test.rs
(+48 files in other folders)
