[package]
name = "strictly_games"
version = "0.1.0"
edition = "2024"
authors = ["Erik Rose <erik.w.rose@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Type-safe game server with MCP interface for LLM agents"
repository = "https://github.com/crumplecup/strictly_games"
default-run = "strictly_games"

[dependencies]
# Database persistence
diesel = { version = "2", features = [
  "sqlite",
  "chrono",
  "returning_clauses_for_sqlite_3_35",
] }
chrono = { version = "0.4", features = ["serde"] }
elicitation = { version = "0.8.0", features = ["rand"] }
rmcp = { version = "0.15", features = [
  "server",
  "client",
  "transport-io",
  "transport-streamable-http-server",
  "transport-streamable-http-client",
  "transport-streamable-http-client-reqwest",
] }
schemars = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
axum = "0.8"
tower = "0.5"
hyper = "1"
hyper-util = { version = "0.1", features = ["client-legacy", "http1", "tokio"] }
http-body-util = "0.1"
reqwest = { version = "0.13.2", features = ["json"] }

# LLM API clients
async-openai = { version = "0.32", features = ["chat-completion"] }

# Environment variables
dotenvy = "0.15"

# MCP Client dependencies
derive_more = { version = "2", features = ["display", "error", "from"] }
derive-getters = "0.5"
derive_setters = "0.1"
derive-new = "0.7"
clap = { version = "4", features = ["derive"] }
toml = "1"
async-trait = "0.1"
strum = { version = "0.27", features = ["derive"] }

# TUI dependencies
ratatui = "0.30"
crossterm = "0.29"

[features]
# Empty marker feature for API tests (prevents accidental token usage)
api = []
