[workspace]
resolver = "2"
members = [
    "crates/strictly_games",
]

[workspace.package]
edition = "2024"
authors = ["Erik Rose <erik.w.rose@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/crumplecup/strictly_games"

[workspace.dependencies]
# Core game logic
strictly_tictactoe = { path = "crates/strictly_tictactoe" }
strictly_server = { path = "crates/strictly_server" }

# Elicitation framework (local dev)
elicitation = { path = "../elicitation/crates/elicitation", features = ["rand"] }

# Database
diesel = { version = "2", features = ["sqlite", "chrono", "returning_clauses_for_sqlite_3_35"] }
diesel_migrations = "2"
chrono = { version = "0.4", features = ["serde"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1"
derive_more = { version = "2", features = ["display", "error", "from"] }
derive-getters = "0.5"
derive_setters = "0.1"
derive-new = "0.7"

# Web framework
axum = "0.8"
tower = "0.5"
hyper = "1"
hyper-util = { version = "0.1", features = ["client-legacy", "http1", "tokio"] }
http-body-util = "0.1"
reqwest = { version = "0.13.2", features = ["json"] }

# MCP
rmcp = { version = "0.16", features = [
    "server",
    "client",
    "transport-io",
    "transport-streamable-http-server",
    "transport-streamable-http-client",
    "transport-streamable-http-client-reqwest",
] }
schemars = { version = "1", features = ["derive"] }

# LLM clients
async-openai = { version = "0.33", features = ["chat-completion"] }

# Config
dotenvy = "0.15"
clap = { version = "4", features = ["derive"] }
toml = "1"

# Utilities
async-trait = "0.1"
strum = { version = "0.28", features = ["derive"] }

# TUI
ratatui = "0.30"
crossterm = "0.29"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
