[package]
name = "strictly_games_tui"
version = "0.1.0"
edition = "2024"
authors = ["Erik Nordquist <erik@crumplecup.com>"]
license = "MIT OR Apache-2.0"
description = "Terminal UI for strictly_games - play with AI agents"

[dependencies]
strictly_games = { path = ".." }
ratatui = "0.28"
crossterm = "0.28"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
async-trait = "0.1"
elicitation = { path = "../../elicitation/crates/elicitation" }
serde_json = "1"
