[package]
name = "strictly_blackjack"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(kani)', 'cfg(creusot)'] }

[dependencies]
# Serialization
serde.workspace = true

# Elicitation
elicitation.workspace = true

# Derive utilities
derive_more.workspace = true

# Tracing (required by Elicit derive)
tracing.workspace = true

# MCP (required by Elicit derive for tool annotations)
rmcp.workspace = true
schemars.workspace = true

# Proc macro support for verification code generation
proc-macro2 = "1"
quote = "1"

# Random number generation (for shuffling via elicitation generators)
elicitation_derive = { workspace = true, optional = true }
elicitation_rand = { workspace = true, optional = true }

# Verification
kani-verifier = { workspace = true, optional = true }

[features]
default = ["shuffle"]
kani = ["kani-verifier"]
shuffle = ["elicitation_derive", "elicitation_rand"]
