[package]
name = "strictly_games"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Type-safe game server with MCP interface for LLM agents"
default-run = "strictly_games"

[dependencies]
strictly_server = { workspace = true }

# CLI
clap = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
dotenvy = { workspace = true }

[features]
# Empty marker feature for API tests
api = []
