[package]
name = "strictly_games"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Type-safe game server with MCP interface for LLM agents"
default-run = "strictly_games"

[dependencies]
strictly_server = { workspace = true }

# CLI
clap = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
dotenvy = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
rmcp = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
hyper = { workspace = true }
http-body-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[features]
# Empty marker feature for API tests
api = []

[dev-dependencies]
diesel = { workspace = true }
diesel_migrations = { workspace = true }
tempfile = "3"
dotenvy = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
serde_json = { workspace = true }
rmcp = { workspace = true }
