[package]
name = "strictly_proofs"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Formal verification harnesses for strictly_games (Kani, Verus, Creusot)"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(creusot)', 'cfg(kani)'] }

[dependencies]
strictly_tictactoe = { workspace = true }
strictly_blackjack = { path = "../strictly_blackjack", default-features = false }
elicitation = { workspace = true }
creusot-std = { workspace = true }

[features]
# Marker feature for verification
verification = []

[lib]
name = "strictly_proofs"
path = "src/lib.rs"
