[package]
name = "strictly_server"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Game server with MCP interface, REST API, and database persistence"

[dependencies]
# Core game types
strictly_tictactoe = { workspace = true }
strictly_blackjack = { workspace = true }
strictly_craps = { workspace = true }

# Elicitation framework
elicitation = { workspace = true }

# Database
diesel = { workspace = true }
diesel_migrations = { workspace = true }
chrono = { workspace = true }

# Async runtime
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Tracing
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Error handling
anyhow = { workspace = true }
derive_more = { workspace = true }
derive-getters = { workspace = true }
derive_setters = { workspace = true }
derive-new = { workspace = true }

# Web framework
axum = { workspace = true }
tower = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
http-body-util = { workspace = true }
reqwest = { workspace = true }

# MCP
rmcp = { workspace = true }
schemars = { workspace = true }

# Proc macro support for verification code generation
proc-macro2 = "1"
quote = "1"

# LLM clients
async-openai = { workspace = true }

# Config
dotenvy = { workspace = true }
toml = { workspace = true }

# Utilities
async-trait = { workspace = true }
strum = { workspace = true }
rand = { version = "0.8", features = ["small_rng"] }

# TUI
ratatui = { workspace = true }
crossterm = { workspace = true }

[dev-dependencies]
tempfile = "3"

[features]
# Empty marker feature for API tests
api = []
# Enable proof generation methods (requires elicitation/proofs)
proofs = []
